add auth api
