# app/api/gen.go
@@ -3,9 +3,20 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package api
 
+// AuthRequest defines model for AuthRequest.
+type AuthRequest struct {
+	Email    string `json:"email"`
+	Password string `json:"password"`
+}
+
 // Error defines model for Error.
 type Error struct {
 	Error string `json:"error"`
+}
+
+// Token defines model for Token.
+type Token struct {
+	Token string `json:"token"`
 }
 
 // User defines model for User.
@@ -21,6 +32,9 @@ type UserCreateRequest struct {
 	Name     string `json:"name"`
 	Password string `json:"password"`
 }
+
+// PostAuthJSONRequestBody defines body for PostAuth for application/json ContentType.
+type PostAuthJSONRequestBody = AuthRequest
 
 // PostUsersJSONRequestBody defines body for PostUsers for application/json ContentType.
 type PostUsersJSONRequestBody = UserCreateRequest
